Added missing translations

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
@@ -59,4 +59,14 @@ UPDATE=تحديث
 VerifyFileIntegrity=التحقق من سلامة الملف
 Version=الإصدار
 Web=الويب
-Windows=النوافذ
+Windows=ويندوز
+ChooseGamesProgramsInstallLocation=اختر موقعًا لتثبيت الألعاب والبرامج.
+Appearance=المظهر
+ColorTheme=سمة اللون
+CouldntOpenWebsite=تعذر فتح موقع الويب.
+CustomizeAppearance=تخصيص مظهر قاذفة Jam54.
+Dark=داكن
+Light=فاتح
+SelectDisplayLangauge=حدد لغة العرض.
+CouldntLaunchApplication=تعذر تشغيل التطبيق.
+CouldntRemoveShortcut=تعذر إزالة الاختصار.
