--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
@@ -60,3 +60,13 @@ VerifyFileIntegrity=Überprüfen Sie die Dateiintegrität
 Version=Version
 Web=Web
 Windows=Windows
+ChooseGamesProgramsInstallLocation=Wählen Sie einen Ort für die Installation von Spielen und Programmen.
+Appearance=Aussehen
+ColorTheme=Farbschema
+CouldntOpenWebsite=Die Website konnte nicht geöffnet werden.
+CustomizeAppearance=Passen Sie das Erscheinungsbild des Jam54 Launcher an.
+Dark=Dunkel
+Light=Hell
+SelectDisplayLangauge=Wählen Sie eine Anzeigesprache.
+CouldntLaunchApplication=Anwendung konnte nicht gestartet werden.
+CouldntRemoveShortcut=Verknüpfung konnte nicht entfernt werden.
