--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
@@ -60,3 +60,13 @@ VerifyFileIntegrity=Verificar la integridad de los archivos
 Version=Versión
 Web=Web
 Windows=Windows
+ChooseGamesProgramsInstallLocation=Elija una ubicación para las instalaciones de Juegos y Programas.
+Appearance=Apariencia
+ColorTheme=Tema de color
+CouldntOpenWebsite=No se puede abrir el sitio web.
+CustomizeAppearance=Personaliza la apariencia del Jam54 Launcher.
+Dark=Oscuro
+Light=Luz
+SelectDisplayLangauge=Selecciona un idioma de visualización.
+CouldntLaunchApplication=No se ha podido iniciar la aplicación.
+CouldntRemoveShortcut=No se puede eliminar el acceso directo.
