--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
@@ -60,3 +60,13 @@ VerifyFileIntegrity=Kontrollige faili terviklikkust
 Version=Versioon
 Web=Veeb
 Windows=Windows
+ChooseGamesProgramsInstallLocation=Valige mängude ja programmide installimise koht.
+Appearance=Välimus
+ColorTheme=Värvi teema
+CouldntOpenWebsite=Veebisaiti ei saanud avada.
+CustomizeAppearance=Kohandage Jam54 käivitaja välimust.
+Dark=Tume
+Light=Valgus
+SelectDisplayLangauge=Valige kuvamise keel.
+CouldntLaunchApplication=Rakendust ei saanud käivitada.
+CouldntRemoveShortcut=Otseteed ei saanud eemaldada.
