--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
@@ -59,4 +59,14 @@ UPDATE=MISE À JOUR
 VerifyFileIntegrity=Vérifier l'intégrité des fichiers
 Version=Version
 Web=Web
-Windows=Fenêtres
+Windows=Windows
+ChooseGamesProgramsInstallLocation=Choisissez un emplacement pour l'installation des jeux et des programmes.
+Appearance=Apparence
+ColorTheme=Thème de couleur
+CouldntOpenWebsite=Impossible d'ouvrir le site web.
+CustomizeAppearance=Personnaliser l'apparence du lanceur Jam54.
+Dark=Sombre
+Light=Lumière
+SelectDisplayLangauge=Sélectionner une langue d'affichage.
+CouldntLaunchApplication=Impossible de lancer l'application.
+CouldntRemoveShortcut=Impossible de supprimer le raccourci.
