--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
@@ -59,4 +59,14 @@ UPDATE=अद्यतन
 VerifyFileIntegrity=फ़ाइल अखंडता की जाँच करें
 Version=संस्करण
 Web=वेब
-Windows=खिड़कियाँ
+Windows=विंडोज
+ChooseGamesProgramsInstallLocation=गेम्स और प्रोग्राम इंस्टॉल के लिए एक स्थान चुनें।
+Appearance=उपस्थिति
+ColorTheme=रंग विषय
+CouldntOpenWebsite=वेबसाइट नहीं खोली जा सकी.
+CustomizeAppearance=Jam54 लॉन्चर की दिखावट को अनुकूलित करें।
+Dark=अँधेरा
+Light=रोशनी
+SelectDisplayLangauge=एक प्रदर्शन भाषा का चयन करें।
+CouldntLaunchApplication=ऐप्लिकेशन लॉन्च नहीं किया जा सका.
+CouldntRemoveShortcut=शॉर्टकट नहीं निकाला जा सका.
