--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
@@ -57,6 +57,16 @@ UNINSTALLING=MENGHAPUS
 Update=Memperbarui
 UPDATE=MEMPERBARUI
 VerifyFileIntegrity=Verifikasi integritas file
-Version=Versi:
+Version=Versi
 Web=Web
 Windows=Windows
+ChooseGamesProgramsInstallLocation=Pilih lokasi untuk menginstal Game dan Program.
+Appearance=Penampilan
+ColorTheme=Tema warna
+CouldntOpenWebsite=Tidak dapat membuka situs web.
+CustomizeAppearance=Kustomisasi tampilan Launcher Jam54.
+Dark=Gelap
+Light=Lampu
+SelectDisplayLangauge=Pilih bahasa tampilan.
+CouldntLaunchApplication=Tidak dapat meluncurkan aplikasi.
+CouldntRemoveShortcut=Tidak dapat menghapus pintasan.
