--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
@@ -60,3 +60,13 @@ VerifyFileIntegrity=ファイルの整合性を確認する
 Version=バージョン
 Web=ウェブ
 Windows=ウィンドウズ
+ChooseGamesProgramsInstallLocation=ゲームとプログラムのインストール先を選択します。
+Appearance=外観
+ColorTheme=カラーテーマ
+CouldntOpenWebsite=ウェブサイトを開くことができなかった。
+CustomizeAppearance=Jam54 Launcherの外観をカスタマイズします。
+Dark=ダーク
+Light=ライト
+SelectDisplayLangauge=表示言語を選択する。
+CouldntLaunchApplication=アプリケーションを起動できませんでした。
+CouldntRemoveShortcut=ショートカットを削除できませんでした。
