--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
@@ -60,3 +60,13 @@ VerifyFileIntegrity=파일 무결성 확인
 Version=버전
 Web=웹
 Windows=윈도우
+ChooseGamesProgramsInstallLocation=게임 및 프로그램 설치 위치를 선택합니다.
+Appearance=외관
+ColorTheme=색상 테마
+CouldntOpenWebsite=웹 사이트를 열 수 없습니다.
+CustomizeAppearance=Jam54 런처의 모양을 사용자 지정합니다.
+Dark=어둠
+Light=광
+SelectDisplayLangauge=표시 언어를 선택합니다.
+CouldntLaunchApplication=응용 프로그램을 시작할 수 없습니다.
+CouldntRemoveShortcut=바로 가기를 제거할 수 없습니다.
