--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
@@ -60,3 +60,13 @@ VerifyFileIntegrity=Controleer de integriteit van het bestand
 Version=Versie
 Web=Web
 Windows=Windows
+ChooseGamesProgramsInstallLocation=Kies een locatie voor de installatie van Games en Programma's.
+Appearance=Verschijning
+ColorTheme=Kleurenthema
+CouldntOpenWebsite=Kon website niet openen.
+CustomizeAppearance=Pas het uiterlijk van de Jam54 Launcher aan.
+Dark=Donker
+Light=Licht
+SelectDisplayLangauge=Selecteer een weergavetaal.
+CouldntLaunchApplication=Kon de applicatie niet starten.
+CouldntRemoveShortcut=Kan de snelkoppeling niet verwijderen.
