--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
@@ -60,3 +60,13 @@ VerifyFileIntegrity=Verificar a integridade do arquivo
 Version=Versão
 Web=Teia
 Windows=Windows
+ChooseGamesProgramsInstallLocation=Escolha um local para as instalações de Jogos e Programas.
+Appearance=Aparência
+ColorTheme=Tema de cores
+CouldntOpenWebsite=Não foi possível abrir o site.
+CustomizeAppearance=Personalize a aparência do Jam54 Launcher.
+Dark=Escuro
+Light=Luz
+SelectDisplayLangauge=Selecione um idioma de exibição.
+CouldntLaunchApplication=Não foi possível iniciar o aplicativo.
+CouldntRemoveShortcut=Não foi possível remover o atalho.
