--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
@@ -60,3 +60,13 @@ VerifyFileIntegrity=Проверка целостности файла
 Version=Версия
 Web=Сеть
 Windows=Окна
+ChooseGamesProgramsInstallLocation=Выберите место для установки игр и программ.
+Appearance=Внешность
+ColorTheme=Цветовая тема
+CouldntOpenWebsite=Не удалось открыть веб-сайт.
+CustomizeAppearance=Настройте внешний вид лаунчера Jam54.
+Dark=Темный
+Light=Свет
+SelectDisplayLangauge=Выберите язык отображения.
+CouldntLaunchApplication=Не удалось запустить приложение.
+CouldntRemoveShortcut=Не удалось удалить ярлык.
