--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
@@ -60,3 +60,13 @@ VerifyFileIntegrity=Dosya bütünlüğünü doğrulama
 Version=Sürüm
 Web=Web
 Windows=Windows
+ChooseGamesProgramsInstallLocation=Oyunlar ve Programlar yüklemeleri için bir konum seçin.
+Appearance=Görünüş
+ColorTheme=Renk teması
+CouldntOpenWebsite=Web sitesi açılamadı.
+CustomizeAppearance=Jam54 Başlatıcısı'nın görünümünü özelleştirin.
+Dark=Koyu
+Light=Işık
+SelectDisplayLangauge=Bir görüntüleme dili seçin.
+CouldntLaunchApplication=Uygulama başlatılamadı.
+CouldntRemoveShortcut=Kısayol kaldırılamadı.
