--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
@@ -60,3 +60,13 @@ VerifyFileIntegrity=验证文件完整性
 Version=版本
 Web=网络
 Windows=视窗
+ChooseGamesProgramsInstallLocation=为游戏和程序安装选择一个位置。
+Appearance=外貌
+ColorTheme=颜色主题
+CouldntOpenWebsite=无法打开网站。
+CustomizeAppearance=自定义 Jam54 启动器的外观。
+Dark=黑暗的
+Light=光
+SelectDisplayLangauge=选择显示语言。
+CouldntLaunchApplication=无法启动应用程序。
+CouldntRemoveShortcut=无法删除快捷方式。
