Added an alert notifying the user the first time they install an app, explaining they can change the installation location in settings

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
@@ -70,3 +70,6 @@ Light=فاتح
 SelectDisplayLangauge=حدد لغة العرض.
 CouldntLaunchApplication=تعذر تشغيل التطبيق.
 CouldntRemoveShortcut=تعذر إزالة الاختصار.
+ApplicationWillBeInstalledAt=سيتم تثبيت التطبيق في: 
+ChangeInstallLocationInSettings=إذا كنت تفضل موقعًا مختلفًا، فيمكنك تغييره في الإعدادات.
+Cancel=إلغاء
