--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
@@ -70,3 +70,6 @@ Light=Hell
 SelectDisplayLangauge=Wählen Sie eine Anzeigesprache.
 CouldntLaunchApplication=Anwendung konnte nicht gestartet werden.
 CouldntRemoveShortcut=Verknüpfung konnte nicht entfernt werden.
+ApplicationWillBeInstalledAt=Die Anwendung wird installiert unter: 
+ChangeInstallLocationInSettings=Wenn Sie einen anderen Speicherort bevorzugen, können Sie ihn in den Einstellungen ändern.
+Cancel=Abbrechen
