--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
@@ -70,3 +70,6 @@ Light=Luz
 SelectDisplayLangauge=Selecciona un idioma de visualización.
 CouldntLaunchApplication=No se ha podido iniciar la aplicación.
 CouldntRemoveShortcut=No se puede eliminar el acceso directo.
+ApplicationWillBeInstalledAt=La aplicación se instalará en: 
+ChangeInstallLocationInSettings=Si prefieres otra ubicación, puedes cambiarla en los ajustes.
+Cancel=Cancelar
