--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
@@ -70,3 +70,6 @@ Light=Valgus
 SelectDisplayLangauge=Valige kuvamise keel.
 CouldntLaunchApplication=Rakendust ei saanud käivitada.
 CouldntRemoveShortcut=Otseteed ei saanud eemaldada.
+ApplicationWillBeInstalledAt=Rakendus installitakse aadressile: 
+ChangeInstallLocationInSettings=Kui eelistate mõnda muud asukohta, saate seda seadetes muuta.
+Cancel=Tühista
