--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
@@ -70,3 +70,6 @@ Light=Lumière
 SelectDisplayLangauge=Sélectionner une langue d'affichage.
 CouldntLaunchApplication=Impossible de lancer l'application.
 CouldntRemoveShortcut=Impossible de supprimer le raccourci.
+ApplicationWillBeInstalledAt=L'application sera installée à l'adresse suivante: 
+ChangeInstallLocationInSettings=Si vous préférez un autre emplacement, vous pouvez le modifier dans les paramètres.
+Cancel=Annuler
