--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
@@ -70,3 +70,6 @@ Light=रोशनी
 SelectDisplayLangauge=एक प्रदर्शन भाषा का चयन करें।
 CouldntLaunchApplication=ऐप्लिकेशन लॉन्च नहीं किया जा सका.
 CouldntRemoveShortcut=शॉर्टकट नहीं निकाला जा सका.
+ApplicationWillBeInstalledAt=आवेदन यहां स्थापित किया जाएगा: 
+ChangeInstallLocationInSettings=यदि आप कोई भिन्न स्थान पसंद करते हैं, तो आप इसे सेटिंग में बदल सकते हैं।
+Cancel=रद्द करना
