--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
@@ -70,3 +70,6 @@ Light=ライト
 SelectDisplayLangauge=表示言語を選択する。
 CouldntLaunchApplication=アプリケーションを起動できませんでした。
 CouldntRemoveShortcut=ショートカットを削除できませんでした。
+ApplicationWillBeInstalledAt=でインストールされるアプリケーションです：
+ChangeInstallLocationInSettings=別の場所がいい場合は、設定で変更することができます。
+Cancel=キャンセル
