--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
@@ -70,3 +70,6 @@ Light=Luz
 SelectDisplayLangauge=Selecione um idioma de exibição.
 CouldntLaunchApplication=Não foi possível iniciar o aplicativo.
 CouldntRemoveShortcut=Não foi possível remover o atalho.
+ApplicationWillBeInstalledAt=O aplicativo será instalado em: 
+ChangeInstallLocationInSettings=Se preferir uma localização diferente, pode alterá-la nas definições.
+Cancel=Cancelar
