--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
@@ -70,3 +70,6 @@ Light=Свет
 SelectDisplayLangauge=Выберите язык отображения.
 CouldntLaunchApplication=Не удалось запустить приложение.
 CouldntRemoveShortcut=Не удалось удалить ярлык.
+ApplicationWillBeInstalledAt=Приложение будет установлено по адресу: 
+ChangeInstallLocationInSettings=Если вы предпочитаете другое местоположение, вы можете изменить его в настройках.
+Cancel=Отменить
