--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
@@ -70,3 +70,6 @@ Light=Işık
 SelectDisplayLangauge=Bir görüntüleme dili seçin.
 CouldntLaunchApplication=Uygulama başlatılamadı.
 CouldntRemoveShortcut=Kısayol kaldırılamadı.
+ApplicationWillBeInstalledAt=Uygulama şu adrese yüklenecektir: 
+ChangeInstallLocationInSettings=Farklı bir konum tercih ederseniz, ayarlardan değiştirebilirsiniz.
+Cancel=İptal
