Fix some translation errors

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
@@ -40,14 +40,14 @@ KindlyHoldForValidationProcedure=Wacht even terwijl "{0}" zijn bestandsvalidatie
 Language=Taal
 LastUpdated=Laatst bijgewerkt
 LatestUpdate=Laatste update
-Launch=Lancering
+Launch=Start
 NoAppsForFilters=Er waren geen toepassingen die voldeden aan de door u opgegeven filters.
 Platform=Platform
 Programs=Programma's
-ReleaseDate=Verschijningsdatum
+ReleaseDate=Uitbrengdatum
 REMOVINGOLDFILES=VERWIJDEREN VAN OUDE BESTANDEN
 RestartRequiredForEffect=Het wijzigen van deze instelling wordt pas van kracht na een herstart.
-Search=Zoek op
+Search=Zoek
 Settings=Instellingen
 SortBy=Sorteren op:
 START=START
@@ -56,12 +56,12 @@ UNINSTALL=UNINSTALL
 UNINSTALLING=UNINSTALLING
 Update=Update
 UPDATE=UPDATE
-VerifyFileIntegrity=Controleer de integriteit van het bestand
+VerifyFileIntegrity=Controleer de integriteit van de programmabestanden
 Version=Versie
 Web=Web
 Windows=Windows
 ChooseGamesProgramsInstallLocation=Kies een locatie voor de installatie van Games en Programma's.
-Appearance=Verschijning
+Appearance=Uiterlijk
 ColorTheme=Kleurenthema
 CouldntOpenWebsite=Kon website niet openen.
 CustomizeAppearance=Pas het uiterlijk van de Jam54 Launcher aan.
