--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
@@ -56,7 +56,7 @@ UNINSTALL=KALDIRMA
 UNINSTALLING=KALDIRMA
 Update=Güncelleştirmek
 UPDATE=GÜNCELLEŞTİRMEK
-VerifyFileIntegrity=Dosya bütünlüğünü doğrulama
+VerifyFileIntegrity=Dosya bütünlüğünü doğrula
 Version=Sürüm
 Web=Web
 Windows=Windows
