Removed the quotation marks around the application names in the translations

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
@@ -34,9 +34,9 @@ GoToStorePage=انتقل إلى صفحة المتجر
 INSTALL=تثبيت
 InstallationLocation=موقع التثبيت
 INSTALLING=جاري التثبيت
-KindlyHoldForInstall=يرجى الانتظار بينما يختتم "{0}" إجراءات التثبيت الخاصة به.
-KindlyHoldForUninstall=يرجى الانتظار حتى ينتهي إجراء إلغاء التثبيت "{0}".
-KindlyHoldForValidationProcedure=يرجى الانتظار بينما يختتم "{0}" إجراء التحقق من صحة الملف.
+KindlyHoldForInstall=يرجى الانتظار بينما يختتم {0} إجراءات التثبيت الخاصة به.
+KindlyHoldForUninstall=يرجى الانتظار حتى ينتهي إجراء إلغاء التثبيت {0}.
+KindlyHoldForValidationProcedure=يرجى الانتظار بينما يختتم {0} إجراء التحقق من صحة الملف.
 Language=اللغة
 LastUpdated=آخر تحديث
 LatestUpdate=آخر المستجدات
