--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
@@ -34,9 +34,9 @@ GoToStorePage=Gehe zu Shop-Seite
 INSTALL=INSTALLIEREN
 InstallationLocation=Aufstellort
 INSTALLING=INSTALLATION LÄUFT
-KindlyHoldForInstall=Bitte warten Sie, bis "{0}" den Installationsvorgang abgeschlossen hat.
-KindlyHoldForUninstall=Bitte warten Sie, bis die Deinstallation von "{0}" abgeschlossen ist.
-KindlyHoldForValidationProcedure=Bitte warten Sie, bis "{0}" seine Dateivalidierungsprozedur abgeschlossen hat.
+KindlyHoldForInstall=Bitte warten Sie, bis {0} den Installationsvorgang abgeschlossen hat.
+KindlyHoldForUninstall=Bitte warten Sie, bis die Deinstallation von {0} abgeschlossen ist.
+KindlyHoldForValidationProcedure=Bitte warten Sie, bis {0} seine Dateivalidierungsprozedur abgeschlossen hat.
 Language=Sprache
 LastUpdated=Zuletzt aktualisiert
 LatestUpdate=Letztes Update
