--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
@@ -34,9 +34,9 @@ GoToStorePage=Ir a la página de la tienda
 INSTALL=INSTALAR
 InstallationLocation=Lugar de instalación
 INSTALLING=INSTALACIÓN
-KindlyHoldForInstall=Espere a que "{0}" finalice el proceso de instalación.
-KindlyHoldForUninstall=Espere a que finalice el proceso de desinstalación de "{0}".
-KindlyHoldForValidationProcedure=Por favor, espere mientras "{0}" concluye su procedimiento de validación de archivos.
+KindlyHoldForInstall=Espere a que {0} finalice el proceso de instalación.
+KindlyHoldForUninstall=Espere a que finalice el proceso de desinstalación de {0}.
+KindlyHoldForValidationProcedure=Por favor, espere mientras {0} concluye su procedimiento de validación de archivos.
 Language=Idioma
 LastUpdated=Última actualización
 LatestUpdate=Última actualización
