--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
@@ -34,9 +34,9 @@ GoToStorePage=Aller à la page du magasin
 INSTALL=INSTALLER
 InstallationLocation=Lieu d'installation
 INSTALLING=INSTALLATION
-KindlyHoldForInstall=Maintenez le bouton enfoncé pendant que "{0}" termine sa procédure d'installation.
-KindlyHoldForUninstall=Patientez jusqu'à la fin de la procédure de désinstallation de "{0}".
-KindlyHoldForValidationProcedure=Veuillez patienter pendant que "{0}" termine sa procédure de validation de fichier.
+KindlyHoldForInstall=Maintenez le bouton enfoncé pendant que {0} termine sa procédure d'installation.
+KindlyHoldForUninstall=Patientez jusqu'à la fin de la procédure de désinstallation de {0}.
+KindlyHoldForValidationProcedure=Veuillez patienter pendant que {0} termine sa procédure de validation de fichier.
 Language=Langue
 LastUpdated=Dernière mise à jour
 LatestUpdate=Dernière mise à jour
