--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_hi.properties
@@ -34,9 +34,9 @@ GoToStorePage=स्टोर पेज पर जाएं
 INSTALL=स्थापित करना
 InstallationLocation=स्थापना स्थान
 INSTALLING=स्थापित करने
-KindlyHoldForInstall=कृपया "{0}" की स्थापना प्रक्रिया समाप्त होने तक रुकें।
-KindlyHoldForUninstall=कृपया "{0}" की स्थापना रद्द करने की प्रक्रिया पूरी होने तक रुकें।
-KindlyHoldForValidationProcedure=कृपया तब तक रुकें जब तक "{0}" अपनी फ़ाइल सत्यापन प्रक्रिया पूरी नहीं कर लेता।
+KindlyHoldForInstall=कृपया {0} की स्थापना प्रक्रिया समाप्त होने तक रुकें।
+KindlyHoldForUninstall=कृपया {0} की स्थापना रद्द करने की प्रक्रिया पूरी होने तक रुकें।
+KindlyHoldForValidationProcedure=कृपया तब तक रुकें जब तक {0} अपनी फ़ाइल सत्यापन प्रक्रिया पूरी नहीं कर लेता।
 Language=भाषा
 LastUpdated=आखरी अपडेट
 LatestUpdate=नवीनतम अद्यतन
