--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
@@ -34,9 +34,9 @@ GoToStorePage=Buka Halaman Toko
 INSTALL=INSTALL
 InstallationLocation=Lokasi Instalasi
 INSTALLING=MENGINSTAL
-KindlyHoldForInstall=Harap tunggu sementara "{0}" mengakhiri prosedur pemasangannya.
-KindlyHoldForUninstall=Harap tunggu sampai prosedur pencopotan pemasangan "{0}" selesai.
-KindlyHoldForValidationProcedure=Harap tunggu sementara "{0}" mengakhiri prosedur validasi filenya.
+KindlyHoldForInstall=Harap tunggu sementara {0} mengakhiri prosedur pemasangannya.
+KindlyHoldForUninstall=Harap tunggu sampai prosedur pencopotan pemasangan {0} selesai.
+KindlyHoldForValidationProcedure=Harap tunggu sementara {0} mengakhiri prosedur validasi filenya.
 Language=Bahasa
 LastUpdated=Terakhir Diperbarui
 LatestUpdate=Pembaruan Terbaru
