--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
@@ -34,9 +34,9 @@ GoToStorePage=ストアページへ
 INSTALL=インストー ル
 InstallationLocation=設置場所
 INSTALLING=インストーラー
-KindlyHoldForInstall="{0}" がインストールを終了するまで、そのままお待ちください。
-KindlyHoldForUninstall="{0}" のアンインストールが終了するまでお待ちください。
-KindlyHoldForValidationProcedure="{0}" がファイル検証を終了するまで、しばらくお待ちください。
+KindlyHoldForInstall={0} がインストールを終了するまで、そのままお待ちください。
+KindlyHoldForUninstall={0} のアンインストールが終了するまでお待ちください。
+KindlyHoldForValidationProcedure={0} がファイル検証を終了するまで、しばらくお待ちください。
 Language=言語
 LastUpdated=最終更新日
 LatestUpdate=最新情報
