--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
@@ -34,9 +34,9 @@ GoToStorePage=Ga naar de winkelpagina
 INSTALL=INSTALLEREN
 InstallationLocation=Plaats van installatie
 INSTALLING=INSTALLEREN
-KindlyHoldForInstall=Wacht even terwijl "{0}" de installatieprocedure afrondt.
-KindlyHoldForUninstall=Wacht even tot de deïnstallatieprocedure van "{0}" klaar is.
-KindlyHoldForValidationProcedure=Wacht even terwijl "{0}" zijn bestandsvalidatieprocedure afrondt.
+KindlyHoldForInstall=Wacht even terwijl {0} de installatieprocedure afrondt.
+KindlyHoldForUninstall=Wacht even tot de deïnstallatieprocedure van {0} klaar is.
+KindlyHoldForValidationProcedure=Wacht even terwijl {0} zijn bestandsvalidatieprocedure afrondt.
 Language=Taal
 LastUpdated=Laatst bijgewerkt
 LatestUpdate=Laatste update
