--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
@@ -34,9 +34,9 @@ GoToStorePage=Ir para a página da Loja
 INSTALL=INSTALAR
 InstallationLocation=Local de instalação
 INSTALLING=INSTALAR
-KindlyHoldForInstall=Por favor, aguarde enquanto "{0}" conclui seu procedimento de instalação.
-KindlyHoldForUninstall=Por favor, aguarde até que o procedimento de desinstalação do "{0}" termine.
-KindlyHoldForValidationProcedure=Por favor, aguarde enquanto "{0}" conclui seu procedimento de validação de arquivo.
+KindlyHoldForInstall=Por favor, aguarde enquanto {0} conclui seu procedimento de instalação.
+KindlyHoldForUninstall=Por favor, aguarde até que o procedimento de desinstalação do {0} termine.
+KindlyHoldForValidationProcedure=Por favor, aguarde enquanto {0} conclui seu procedimento de validação de arquivo.
 Language=Idioma
 LastUpdated=Última atualização
 LatestUpdate=Última atualização
