--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
@@ -34,9 +34,9 @@ GoToStorePage=Перейти на страницу Магазина
 INSTALL=устанавливать
 InstallationLocation=Место установки
 INSTALLING=установка
-KindlyHoldForInstall=Пожалуйста, подождите, пока "{0}" завершит процедуру установки.
-KindlyHoldForUninstall=Пожалуйста, подождите, пока не завершится процедура удаления "{0}".
-KindlyHoldForValidationProcedure=Пожалуйста, подождите, пока "{0}" завершит процедуру проверки файла.
+KindlyHoldForInstall=Пожалуйста, подождите, пока {0} завершит процедуру установки.
+KindlyHoldForUninstall=Пожалуйста, подождите, пока не завершится процедура удаления {0}.
+KindlyHoldForValidationProcedure=Пожалуйста, подождите, пока {0} завершит процедуру проверки файла.
 Language=Язык
 LastUpdated=Последнее обновление
 LatestUpdate=Последнее обновление
