--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
@@ -34,9 +34,9 @@ GoToStorePage=Mağaza Sayfasına Git
 INSTALL=YÜKLEMEK
 InstallationLocation=Yükleme Konumu
 INSTALLING=YÜKLEME
-KindlyHoldForInstall=Lütfen "{0}" kurulum prosedürünü tamamlarken bekleyin.
-KindlyHoldForUninstall=Lütfen "{0}" kaldırma prosedürü bitene kadar bekleyin.
-KindlyHoldForValidationProcedure=Lütfen "{0}" dosya doğrulama prosedürünü tamamlarken bekleyin.
+KindlyHoldForInstall=Lütfen {0} kurulum prosedürünü tamamlarken bekleyin.
+KindlyHoldForUninstall=Lütfen {0} kaldırma prosedürü bitene kadar bekleyin.
+KindlyHoldForValidationProcedure=Lütfen {0} dosya doğrulama prosedürünü tamamlarken bekleyin.
 Language=Dil
 LastUpdated=Son Güncelleme
 LatestUpdate=Son Güncelleme
