--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
@@ -34,9 +34,9 @@ GoToStorePage=前往商店页面
 INSTALL=安装
 InstallationLocation=安装位置
 INSTALLING=安装
-KindlyHoldForInstall=请稍候，"{0}" 正在完成其安装过程。
-KindlyHoldForUninstall=请稍等，直到 "{0}" 的卸载程序完成。
-KindlyHoldForValidationProcedure=请稍候，"{0}" 正在完成其文件验证程序。
+KindlyHoldForInstall=请稍候，{0} 正在完成其安装过程。
+KindlyHoldForUninstall=请稍等，直到 {0} 的卸载程序完成。
+KindlyHoldForValidationProcedure=请稍候，{0} 正在完成其文件验证程序。
 Language=语言
 LastUpdated=最近更新时间
 LatestUpdate=最新更新
