--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
@@ -34,9 +34,9 @@ GoToStorePage=Minge poe lehele
 INSTALL=PAIGALDA
 InstallationLocation=Paigalduskoht
 INSTALLING=PAIGALDAMINE
-KindlyHoldForInstall=Palun oodake, kuni "{0}" oma installiprotseduuri lõpetab.
-KindlyHoldForUninstall=Oodake, kuni "{0}" desinstallimisprotseduur on lõppenud.
-KindlyHoldForValidationProcedure=Palun oodake, kuni "{0}" lõpetab faili kinnitamise protseduuri.
+KindlyHoldForInstall=Palun oodake, kuni {0} oma installiprotseduuri lõpetab.
+KindlyHoldForUninstall=Oodake, kuni {0} desinstallimisprotseduur on lõppenud.
+KindlyHoldForValidationProcedure=Palun oodake, kuni {0} lõpetab faili kinnitamise protseduuri.
 Language=Keel
 LastUpdated=Viimati uuendatud
 LatestUpdate=Viimane värskendus
