--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
@@ -34,9 +34,9 @@ GoToStorePage=스토어 페이지로 이동
 INSTALL=설치하다
 InstallationLocation=설치 위치
 INSTALLING=설치
-KindlyHoldForInstall="{0}" 이 설치 절차를 마칠 때까지 기다려주십시오.
-KindlyHoldForUninstall="{0}" 의 제거 절차가 완료 될 때까지 기다리십시오.
-KindlyHoldForValidationProcedure="{0}" 가 파일 유효성 검사 절차를 완료하는 동안 기다려주십시오.
+KindlyHoldForInstall={0} 이 설치 절차를 마칠 때까지 기다려주십시오.
+KindlyHoldForUninstall={0} 의 제거 절차가 완료 될 때까지 기다리십시오.
+KindlyHoldForValidationProcedure={0} 가 파일 유효성 검사 절차를 완료하는 동안 기다려주십시오.
 Language=언어
 LastUpdated=마지막 업데이트 날짜
 LatestUpdate=최신 업데이트
