Improved the system responsible for downloading and updating applications to automatically retry the download of files that were interrupted due to a connection or read timeout.

--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ar.properties
@@ -73,3 +73,4 @@ CouldntRemoveShortcut=تعذر إزالة الاختصار.
 ApplicationWillBeInstalledAt=سيتم تثبيت التطبيق في: 
 ChangeInstallLocationInSettings=إذا كنت تفضل موقعًا مختلفًا، فيمكنك تغييره في الإعدادات.
 Cancel=إلغاء
+FailedDownloadingFiles=فشل في تحميل الملفات المطلوبة بعد عدة محاولات.
