--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_de.properties
@@ -73,3 +73,4 @@ CouldntRemoveShortcut=Verknüpfung konnte nicht entfernt werden.
 ApplicationWillBeInstalledAt=Die Anwendung wird installiert unter: 
 ChangeInstallLocationInSettings=Wenn Sie einen anderen Speicherort bevorzugen, können Sie ihn in den Einstellungen ändern.
 Cancel=Abbrechen
+FailedDownloadingFiles=Fehler beim Herunterladen der erforderlichen Dateien nach mehreren Versuchen.
