--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_en.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_en.properties
@@ -73,3 +73,4 @@ CouldntRemoveShortcut=Couldn't remove shortcut.
 ApplicationWillBeInstalledAt=The application will be installed at: 
 ChangeInstallLocationInSettings=If you prefer a different location, you can change it in the settings.
 Cancel=Cancel
+FailedDownloadingFiles=Failed to download the required files after multiple retries.
