--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_es.properties
@@ -73,3 +73,4 @@ CouldntRemoveShortcut=No se puede eliminar el acceso directo.
 ApplicationWillBeInstalledAt=La aplicación se instalará en: 
 ChangeInstallLocationInSettings=Si prefieres otra ubicación, puedes cambiarla en los ajustes.
 Cancel=Cancelar
+FailedDownloadingFiles=No se pudo descargar los archivos requeridos después de varios intentos.
