--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_et.properties
@@ -73,3 +73,4 @@ CouldntRemoveShortcut=Otseteed ei saanud eemaldada.
 ApplicationWillBeInstalledAt=Rakendus installitakse aadressile: 
 ChangeInstallLocationInSettings=Kui eelistate mõnda muud asukohta, saate seda seadetes muuta.
 Cancel=Tühista
+FailedDownloadingFiles=Ei õnnestunud vajalikke faile mitme korduva katse järel alla laadida.
