--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_fr.properties
@@ -73,3 +73,4 @@ CouldntRemoveShortcut=Impossible de supprimer le raccourci.
 ApplicationWillBeInstalledAt=L'application sera installée à l'adresse suivante: 
 ChangeInstallLocationInSettings=Si vous préférez un autre emplacement, vous pouvez le modifier dans les paramètres.
 Cancel=Annuler
+FailedDownloadingFiles=Échec du téléchargement des fichiers requis après plusieurs tentatives.
