--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_id.properties
@@ -73,3 +73,4 @@ CouldntRemoveShortcut=Tidak dapat menghapus pintasan.
 ApplicationWillBeInstalledAt=Aplikasi akan dipasang di: 
 ChangeInstallLocationInSettings=Jika Anda lebih suka lokasi yang berbeda, Anda dapat mengubahnya di pengaturan.
 Cancel=Membatalkan
+FailedDownloadingFiles=Gagal mengunduh file yang diperlukan setelah beberapa percobaan.
