--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ja.properties
@@ -73,3 +73,4 @@ CouldntRemoveShortcut=ショートカットを削除できませんでした。
 ApplicationWillBeInstalledAt=でインストールされるアプリケーションです：
 ChangeInstallLocationInSettings=別の場所がいい場合は、設定で変更することができます。
 Cancel=キャンセル
+FailedDownloadingFiles=複数回の再試行の後、必要なファイルのダウンロードに失敗しました。
