--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_pt.properties
@@ -73,3 +73,4 @@ CouldntRemoveShortcut=Não foi possível remover o atalho.
 ApplicationWillBeInstalledAt=O aplicativo será instalado em: 
 ChangeInstallLocationInSettings=Se preferir uma localização diferente, pode alterá-la nas definições.
 Cancel=Cancelar
+FailedDownloadingFiles=Falha ao baixar os arquivos necessários após várias tentativas.
