--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ru.properties
@@ -73,3 +73,4 @@ CouldntRemoveShortcut=Не удалось удалить ярлык.
 ApplicationWillBeInstalledAt=Приложение будет установлено по адресу: 
 ChangeInstallLocationInSettings=Если вы предпочитаете другое местоположение, вы можете изменить его в настройках.
 Cancel=Отменить
+FailedDownloadingFiles=Не удалось загрузить необходимые файлы после нескольких попыток.
