--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_tr.properties
@@ -73,3 +73,4 @@ CouldntRemoveShortcut=Kısayol kaldırılamadı.
 ApplicationWillBeInstalledAt=Uygulama şu adrese yüklenecektir: 
 ChangeInstallLocationInSettings=Farklı bir konum tercih ederseniz, ayarlardan değiştirebilirsiniz.
 Cancel=İptal
+FailedDownloadingFiles=Gerekli dosyaları birden çok denemeden sonra indirme başarısızdı.
