--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_zh.properties
@@ -73,3 +73,4 @@ CouldntRemoveShortcut=无法删除快捷方式。
 ApplicationWillBeInstalledAt=该应用程序将安装在：
 ChangeInstallLocationInSettings=如果您喜欢不同的位置，可以在设置中进行更改。
 Cancel=取消
+FailedDownloadingFiles=多次重试后无法下载所需文件。
