--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_ko.properties
@@ -73,3 +73,4 @@ CouldntRemoveShortcut=바로 가기를 제거할 수 없습니다.
 ApplicationWillBeInstalledAt=응용 프로그램은 다음 위치에 설치됩니다. 
 ChangeInstallLocationInSettings=다른 위치를 선호하는 경우 설정에서 변경할 수 있습니다.
 Cancel=취소
+FailedDownloadingFiles=여러 번 재시도 후에 필요한 파일을 다운로드하지 못했습니다.
