--- a/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
+++ b/Jam54_Launcher/src/main/resources/com/jam54/jam54_launcher/i18n_nl.properties
@@ -73,3 +73,4 @@ CouldntRemoveShortcut=Kan de snelkoppeling niet verwijderen.
 ApplicationWillBeInstalledAt=De applicatie wordt geïnstalleerd op: 
 ChangeInstallLocationInSettings=Als u een andere locatie verkiest, kunt u die in de instellingen wijzigen.
 Cancel=Annuleren
+FailedDownloadingFiles=Mislukt om de vereiste bestanden te downloaden na meerdere pogingen.
